[package]
name = "sapa"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
base64 = "0.10"
bigint = "4"
bincode = "1.2"
ctrlc = "3.1"
crossbeam = "0.7"
enum-display-derive = "0.1"
futures = "0.3"
hex = "0.4"
hex-literal = "0.2"
lazy_static = "1.4"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
piper = "0.1"
rand = "0.7"
ring = "0.16"
rocksdb = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.4"
smol = "0.1"
statrs = "0.12"
stderrlog = "0.4"
tiny_http = "0.6"
url = "2.1"
[dependencies.ed25519-dalek]
version = "1.0.0"
default-features = false
features = ["u64_backend", "std", "batch"]
[dependencies.clap]
version = "2.33"
features = [ "wrap_help" ]
